study: 파이널 프로젝트 진행 | 251111(오전/오후)
- 4주차 진행 [프론트엔드 상품카드 오류 수정] (상품카드, 상품정보, 상품 탭),
[백엔드 상품 및 상품 상세 기능 작성 완료] (상품 필터 확장, 리뷰 통계 리팩토링)